chore: setup prettier for html & css files

--- a/.prettierignore
+++ b/.prettierignore
@@ -3,5 +3,11 @@ clients/**/*/dist/
 packages/app/dist/
 node_modules/
 *.d.ts
+*.min.css
 package-lock.json
 plugins/plugin-apache-composer/tests/data/composer/composer-source-expect-errors/if-bad.js
+
+# Ignore themes because we can't ignore just the highlightjs themes
+# https://github.com/prettier/prettier/issues/5287
+packages/app/web/css/themes/*.css
+packages/kui-builder/examples/build-configs/default/theme/css/themes/*.css
