--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,5 +1,19 @@
 {
   "semi": false,
   "printWidth": 120,
-  "singleQuote": true
+  "singleQuote": true,
+  "overrides": [
+    {
+      "files": "*.html",
+      "options": {
+        "printWidth": 300
+      }
+    },
+    {
+      "files": "*.css",
+      "options": {
+        "singleQuote": false
+      }
+    }
+  ]
 }
