--- a/packages/webpack/package.json
+++ b/packages/webpack/package.json
@@ -48,8 +48,7 @@
     "to-string-loader": "1.1.5",
     "webpack": "4.35.0",
     "webpack-cli": "3.3.5",
-    "webpack-dev-server": "3.7.2",
-    "webpack-visualizer-plugin": "0.1.11"
+    "webpack-dev-server": "3.7.2"
   },
   "kui": {
     "headless": false,
