--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ services:
 os:
   - linux
   - osx
+  - windows
 
 env:
   matrix:
@@ -16,7 +17,6 @@ env:
       LAYERS="core bash-like core-support editor"
       MOCHA_TARGETS="webpack electron"
       KUI_USE_PROXY=true
-      NEEDS_IBMCLOUD_CLI=true # see plugins/plugin-bash-like/src/test/bash-like/bash-like.ts
 
     - SCRIPTS="build-webpack-client.sh lint.sh typecov.sh"
       LAYERS="openwhisk1 openwhisk3 grid"
@@ -68,7 +68,8 @@ env:
     - WINDOW_HEIGHT=1050                  # ! ibid !
     - LINUX_BUILD="${TRAVIS_BUILD_DIR}/clients/electron/dist/electron/Kui-linux-x64/Kui" # test against linux electron build
     - OSX_BUILD="${TRAVIS_BUILD_DIR}/clients/electron/dist/electron/Kui-darwin-x64/Kui.app/Contents/MacOS/Kui" # test against darwin electron build
-    - TEST_FROM_BUILD=`[ "$TRAVIS_OS_NAME" == linux ] && echo "$LINUX_BUILD" || echo "$OSX_BUILD"`
+    - WINDOWS_BUILD="${TRAVIS_BUILD_DIR}/clients/electron/dist/electron/Kui-win32-x64/Kui.exe" # test against win32 electron build
+    - TEST_FROM_BUILD=`case "$TRAVIS_OS_NAME" in "linux") echo "$LINUX_BUILD";; "osx") echo "$OSX_BUILD";; *) echo "$WINDOWS_BUILD";; esac`
     - BUILD_ENV=production                # please note: used in dist/electron/build.sh with npm prune --production
     - HOMEBREW_NO_AUTO_UPDATE=1           # disable auto update before running brew install, brew upgrade or brew tap
 
@@ -85,6 +86,17 @@ matrix:
       env: WAIT_LAYERS="k8s" LAYERS="k8s1 k8s2" MOCHA_TARGETS="electron" NEEDS_KUBERNETES=true NEEDS_HELM=true TIMEOUT=100000
     - os: osx
       env: LAYERS="HEADLESS k8s1 k8s2" KUI_USE_PROXY=true MOCHA_TARGETS="webpack" NEEDS_KUBERNETES=true NEEDS_HELM=true NEEDS_HEADLESS=true TIMEOUT=100000
+    - os: windows
+      env: SCRIPTS="build-webpack-client.sh lint.sh typecov.sh" LAYERS="openwhisk1 openwhisk3 grid" MOCHA_TARGETS="webpack electron" KUI_USE_PROXY=false NEEDS_OPENWHISK=true
+    - os: windows
+      env: LAYERS="openwhisk2 openwhisk4 composer1 composer2" MOCHA_TARGETS="electron" NEEDS_OPENWHISK=true NEEDS_OPENWHISK_API_GATEWAY=true NEEDS_OPENWHISK_NODEJS8=true NEEDS_OPENWHISK_JAVA8=true NEEDS_SECOND_OPENWHISK_AUTH=true
+    - os: windows
+      env: WAIT_LAYERS="k8s" LAYERS="k8s1 k8s2" MOCHA_TARGETS="electron" NEEDS_KUBERNETES=true NEEDS_HELM=true TIMEOUT=100000
+    - os: windows
+      env: LAYERS="HEADLESS k8s1 k8s2" KUI_USE_PROXY=true MOCHA_TARGETS="webpack" NEEDS_KUBERNETES=true NEEDS_HELM=true NEEDS_HEADLESS=true TIMEOUT=100000
+  allow_failures:
+    - os: windows
+      env: NO_WINDOWS=true
 
 install: ./tools/travis/test/install.sh
 script: ./tools/travis/test/script.sh
