--- a/plugins/plugin-manager/package.json
+++ b/plugins/plugin-manager/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kui-shell/plugin-manager",
-  "version": "5.1.3",
+  "version": "5.1.4",
   "description": "Support for field installation of plugins",
   "license": "Apache-2.0",
   "author": "Nick Mitchell",
@@ -33,7 +33,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "gitHead": "89de9f78e8a1a2bdd29d2e17d7c608ab006c6d32",
+  "gitHead": "08941498fa276ba569ecfedd0eb870f88b39509b"
   "devDependencies": {
     "@types/which": "^1.3.2"
   }
