--- a/plugins/plugin-operator-framework/package.json
+++ b/plugins/plugin-operator-framework/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kui-shell/plugin-operator-framework",
-  "version": "5.1.3",
+  "version": "5.1.4",
   "description": "Kui plugin for Operator Framework",
   "license": "Apache-2.0",
   "author": "Nick Mitchell",
@@ -29,5 +29,6 @@
   },
   "publishConfig": {
     "access": "public"
-  }
+  },
+  "gitHead": "08941498fa276ba569ecfedd0eb870f88b39509b"
 }
