--- a/plugins/plugin-tekton/package.json
+++ b/plugins/plugin-tekton/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kui-shell/plugin-tekton",
-  "version": "5.1.3",
+  "version": "5.1.4",
   "description": "Visualizations for Tekton Pipelines",
   "license": "Apache-2.0",
   "author": "Nick Mitchell",
@@ -31,5 +31,6 @@
   },
   "publishConfig": {
     "access": "public"
-  }
+  },
+  "gitHead": "08941498fa276ba569ecfedd0eb870f88b39509b"
 }
