--- a/plugins/plugin-operator-framework/package.json
+++ b/plugins/plugin-operator-framework/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kui-shell/plugin-operator-framework",
-  "version": "5.2.9",
+  "version": "5.2.10",
   "description": "Kui plugin for Operator Framework",
   "license": "Apache-2.0",
   "author": "Nick Mitchell",
@@ -29,5 +29,6 @@
   },
   "publishConfig": {
     "access": "public"
-  }
+  },
+  "gitHead": "b64f5d706116f7572960b0acd90ade595d874a29"
 }
