--- a/plugins/plugin-tekton/package.json
+++ b/plugins/plugin-tekton/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kui-shell/plugin-tekton",
-  "version": "5.3.9",
+  "version": "5.3.10",
   "description": "Visualizations for Tekton Pipelines",
   "license": "Apache-2.0",
   "author": "Nick Mitchell",
@@ -31,5 +31,6 @@
   },
   "publishConfig": {
     "access": "public"
-  }
+  },
+  "gitHead": "9d8ee366bf9d6c470bb4207b1c5e712105d4f252"
 }
